[gd_scene load_steps=10 format=3 uid="uid://kueht0rr6u4q"]

[ext_resource type="Script" uid="uid://4fia16mr7ogk" path="res://Game Logic/object/plants/generic_plant.gd" id="1_mt5gv"]
[ext_resource type="Script" uid="uid://c3cgrr073uht8" path="res://Game Logic/object/plants/plant_appearance.gd" id="2_vk3rb"]
[ext_resource type="Script" uid="uid://bndjcrkta02c4" path="res://Game Logic/object/plants/plant_component.gd" id="3_2drfb"]
[ext_resource type="Script" uid="uid://c3qmsruatmctk" path="res://Game Logic/object/interaction_hitbox.gd" id="4_vdkux"]
[ext_resource type="Script" uid="uid://c1whaq778qys2" path="res://Game Logic/object/obj_elevation_handler.gd" id="5_vk3rb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l825y"]
size = Vector2(40, 40)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5h8sg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6m0np"]
atlas = SubResource("CompressedTexture2D_5h8sg")
region = Rect2(67.2142, 120.71, 43.4497, 36.8664)

[sub_resource type="CircleShape2D" id="CircleShape2D_0mxl1"]
radius = 29.0689

[node name="GenericPlant" type="Area2D" groups=["plant_growable", "player_interactable"]]
y_sort_enabled = true
script = ExtResource("1_mt5gv")
object_id = "plant_crop_carrot"

[node name="StepCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l825y")

[node name="PlantAppearance" type="Node2D" parent="."]
script = ExtResource("2_vk3rb")
growth_stage_textures = Array[Texture2D]([null, null])
growth_stage_texture_offset = Array[Vector2]([Vector2(0, 0), Vector2(0, 0)])

[node name="Sprite2D" type="Sprite2D" parent="PlantAppearance"]
y_sort_enabled = true
texture = SubResource("AtlasTexture_6m0np")

[node name="PlantComponent" type="Node2D" parent="."]
script = ExtResource("3_2drfb")
growth_stage_minutes = Array[int]([1000000])

[node name="InteractionHitbox" type="StaticBody2D" parent="."]
script = ExtResource("4_vdkux")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionHitbox"]
shape = SubResource("CircleShape2D_0mxl1")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="ObjElevationHandler" type="Node" parent="."]
script = ExtResource("5_vk3rb")
metadata/_custom_type_script = "uid://c1whaq778qys2"
